[package]
name = "brainfuck-int"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
authors = ["de_grote"]
repository = "https://github.com/de-grote/Brainfuck-int"
readme = "readme.md"
description = "Simple brainfuck interpreter"
keywords = ["brainfuck", "interpreter"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
